--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Test embed RacontR</title>
 </head>
 <body>
-<iframe src="https://app.racontr.com/projects/racontr-prise-en-main/" width="100%" height="100%" frameborder="0" onmousewheel="" scrolling="no" style="width: 1px; min-width: 100%; width: 100%; height: 1px; min-height: 100%; height: 100%;" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://app.racontr.com/projects/racontr-prise-en-main/" width="100%" height="100%" frameborder="0" onmousewheel="" scrolling="no" style="width: 1px; min-width: 100%; width: 100%; height: 100vh;" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </body>
 </html>
