--- a/filtres.html
+++ b/filtres.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Filtres</title>
     <style>
+        #gradient {
+            background: -webkit-radial-gradient(50% 50%, circle, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) );
+            background: -moz-radial-gradient(50% 50%, circle, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) );
+        }
+
         .aden {
             position: relative;
             -webkit-filter: hue-rotate(-20deg) contrast(.9) saturate(.85) brightness(1.2);
@@ -952,9 +957,10 @@
     </style>
 </head>
 <body>
+
 <h1>Filtres sur image en CSS</h1>
 
-
+<aside id="warning"></aside>
 <div style="padding:50px;margin:20px">
     <p>Sélectionner un filtre et cliquez sur Appliquer</p>
     <select id="filtres">
@@ -987,9 +993,14 @@
         <option label="xpro2" value="xpro2"></option>
     </select>
     <button onclick="Setfiltre()">Appliquer</button>
+    <input type="checkbox" id="gradientoption" value="linear">Bascule avec dégradé linéaire<br
+    <br>
     <button onclick="document.location.reload(true)">Reset</button>
 </div>
-<img id="img" class="aden" src="img/photo.jpg">
+<div id="container2">
+<img id="img" class="top mainimage" src="img/photo.jpg">
+</div>
+<div class="bottom mainimage" id="gradient" style="background: -webkit-radial-gradient(50% 50%, circle cover, rgba(0, 0, 0, 0), rgb(0, 0, 0));"></div>
 
 <script>
     function Setfiltre()
@@ -1009,7 +1020,237 @@
         img.classList.remove("no");
         img.classList.add(filtre);
     }
+
+    var gradientOption = document.querySelector("#gradientoption");
+    var myDiv = document.querySelector("#gradient");
+
+    gradientoption.onchange = function(){
+        var option = this.checked;
+        if (option == true){
+            myDiv.style.background = "-webkit-linear-gradient(left, rgba(241,196,15,1) 0%,rgba(224,227,229,0) 100%)";
+            myDiv.style.background = "-moz-linear-gradient(left, rgba(241,196,15,1) 0%,rgba(224,227,229,0) 100%)";
+            myDiv.style.background = "-ms-linear-gradient(left, rgba(241,196,15,1) 0%,rgba(224,227,229,0) 100%)";
+            myDiv.style.background = "linear-gradient(left, rgba(241,196,15,1) 0%,rgba(224,227,229,0) 100%)";
+        }
+        else {
+            myDiv.style.background = "-webkit-radial-gradient(50% 50%, circle, rgba(0,0,0,0), rgba(0,0,0,1))";
+            myDiv.style.background = "-moz-radial-gradient(50% 50%, circle, rgba(0,0,0,0), rgba(0,0,0,1))";
+            myDiv.style.background = "-ms-radial-gradient(50% 50%, circle, rgba(0,0,0,0), rgba(0,0,0,1))";
+            myDiv.style.background = "radial-gradient(50% 50%, circle, rgba(0,0,0,0), rgba(0,0,0,1))";
+        }
+    }
+
+    function detect(){
+
+        var supportsMixBlendMode = Modernizr.testProp('mixBlendMode');
+        var supportsBackgroundBlendMode =  Modernizr.testProp('backgroundBlendMode');
+        var aside = document.querySelector("#warning");
+
+        if (!supportsMixBlendMode || !supportsBackgroundBlendMode){
+            aside.style.display="block";
+            aside.innerHTML = "<p>Looks like your browser does not support blend modes. Please run this demo in a browser which does and make sure support for it is enabled.</p><ul><li>Is <code>mix-blend-mode</code> supported by this browser?: <span>"+supportsMixBlendMode+"</span></li><li>Is <code>background-blend-mode</code> supported by this browser?: <span>"+supportsBackgroundBlendMode+"</span></li></ul>";
+        }
+
+    }
+
+    detect();
 </script>
+
+<hr>
+<style>
+
+    #info {
+        position: absolute;
+        left: 10px;
+        top: 10px;
+    }
+
+    #info {
+        background: rgba(0,0,0,0.8);
+        padding: 12px 10px;
+        margin-bottom: 1px;
+        color: #fff;
+    }
+
+    #info h1 {
+        line-height: 22px;
+        font-weight: 300;
+        font-size: 18px;
+        margin: 0;
+    }
+
+    #info h2 {
+        line-height: 14px;
+        font-weight: 300;
+        font-size: 12px;
+        color: rgba(255,255,255,0.8);
+        margin: 0 0 6px 0;
+    }
+
+    #info a {
+        text-transform: uppercase;
+        text-decoration: none;
+        border-bottom: 1px dotted rgba(255,255,255,0.2);
+        margin-right: 4px;
+        line-height: 20px;
+        font-size: 10px;
+        color: rgba(255,255,255,0.5);
+    }
+
+    #info a:hover {
+        border-bottom: 1px dotted rgba(255,255,255,0.6);
+        color: rgba(255,255,255,1.0);
+    }
+
+</style>
+<h2>Particules</h2>
+
+<div  style="height: 300px;width: 500px">
+    <div style="background: #222;"id="container"></div>
+</div>
+<script src="js/sketch.min.js"></script>
+<script>
+
+    // ----------------------------------------
+    // Particle
+    // ----------------------------------------
+
+    function Particle( x, y, radius ) {
+        this.init( x, y, radius );
+    }
+
+    Particle.prototype = {
+
+        init: function( x, y, radius ) {
+
+            this.alive = true;
+
+            this.radius = radius || 10;
+            this.wander = 0.15;
+            this.theta = random( TWO_PI );
+            this.drag = 0.92;
+            this.color = '#fff';
+
+            this.x = x || 0.0;
+            this.y = y || 0.0;
+
+            this.vx = 0.0;
+            this.vy = 0.0;
+        },
+
+        move: function() {
+
+            this.x += this.vx;
+            this.y += this.vy;
+
+            this.vx *= this.drag;
+            this.vy *= this.drag;
+
+            this.theta += random( -0.5, 0.5 ) * this.wander;
+            this.vx += sin( this.theta ) * 0.1;
+            this.vy += cos( this.theta ) * 0.1;
+
+            this.radius *= 0.96;
+            this.alive = this.radius > 0.5;
+        },
+
+        draw: function( ctx )   {
+
+            ctx.beginPath();
+            ctx.arc( this.x, this.y, this.radius, 0, TWO_PI );
+            ctx.fillStyle = this.color;
+            ctx.fill();
+        }
+    };
+
+    // ----------------------------------------
+    // Example
+    // ----------------------------------------
+
+    var MAX_PARTICLES = 280;
+    var COLOURS = [ '#69D2E7', '#A7DBD8', '#E0E4CC', '#F38630', '#FA6900', '#FF4E50', '#F9D423' ];
+
+    var particles = [];
+    var pool = [];
+
+    var demo = Sketch.create({
+        container: document.getElementById( 'container' ),
+        retina: 'auto'
+    });
+
+    demo.setup = function() {
+
+        // Set off some initial particles.
+        var i, x, y;
+
+        for ( i = 0; i < 20; i++ ) {
+            x = ( demo.width * 0.5 ) + random( -100, 100 );
+            y = ( demo.height * 0.5 ) + random( -100, 100 );
+            demo.spawn( x, y );
+        }
+    };
+
+    demo.spawn = function( x, y ) {
+
+        var particle, theta, force;
+
+        if ( particles.length >= MAX_PARTICLES )
+            pool.push( particles.shift() );
+
+        particle = pool.length ? pool.pop() : new Particle();
+        particle.init( x, y, random( 5, 40 ) );
+
+        particle.wander = random( 0.5, 2.0 );
+        particle.color = random( COLOURS );
+        particle.drag = random( 0.9, 0.99 );
+
+        theta = random( TWO_PI );
+        force = random( 2, 8 );
+
+        particle.vx = sin( theta ) * force;
+        particle.vy = cos( theta ) * force;
+
+        particles.push( particle );
+    };
+
+    demo.update = function() {
+
+        var i, particle;
+
+        for ( i = particles.length - 1; i >= 0; i-- ) {
+
+            particle = particles[i];
+
+            if ( particle.alive ) particle.move();
+            else pool.push( particles.splice( i, 1 )[0] );
+        }
+    };
+
+    demo.draw = function() {
+
+        demo.globalCompositeOperation  = 'lighter';
+
+        for ( var i = particles.length - 1; i >= 0; i-- ) {
+            particles[i].draw( demo );
+        }
+    };
+
+    demo.mousemove = function() {
+
+        var particle, theta, force, touch, max, i, j, n;
+
+        for ( i = 0, n = demo.touches.length; i < n; i++ ) {
+
+            touch = demo.touches[i], max = random( 1, 4 );
+            for ( j = 0; j < max; j++ ) {
+                demo.spawn( touch.x, touch.y );
+            }
+
+        }
+    };
+
+</script>
+
 </body>
 </body>
 </html>
